syntax = "proto3";
package serializers;

option java_package = "io.confluent.serializers.record";

enum AnEnum {
  A = 0;
  B = 1;
}

message AMessage {
  AnEnum anEnum = 1;
  string aString = 2;
  int64 aLong = 3;
  int32 anInt = 4;
  string anotherString = 5;
}
